manifests/apps/order/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: 869681612022.dkr.ecr.us-east-1.amazonaws.com/order:latest
