manifests/apps/order/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: orders
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: order
