manifests/apps/order/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order
  namespace: orders
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 80
